--- a/airflow/www/templates/airflow/main.html
+++ b/airflow/www/templates/airflow/main.html
@@ -30,6 +30,7 @@
 
 {% block head_meta %}
   {{ super() }}
+  <script defer src="/static/js/toggle_theme.js"></script>
   {% if scheduler_job is defined and (scheduler_job and scheduler_job.is_alive()) %}
     <meta name="is_scheduler_running" content="True">
   {% endif %}
@@ -114,7 +115,6 @@
 
 {% block tail_js %}
   {{ super() }}
-
   <script>
     // below variables are used in main.js
     // keep as var, changing to const or let breaks other code
