--- a/airflow/www/static/css/bootstrap-theme.css
+++ b/airflow/www/static/css/bootstrap-theme.css
@@ -37,10 +37,10 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 html[data-color-scheme='dark'] {
-  filter:invert(100%)hue-rotate(180deg);
+  filter:invert(100%) hue-rotate(180deg);
 }
 html[data-color-scheme='light'] {
-
+  /* not do */
 }
 body {
   margin: 0;
