--- a/airflow/www/templates/airflow/dags.html
+++ b/airflow/www/templates/airflow/dags.html
@@ -392,16 +392,16 @@
                     <span class="material-icons" aria-hidden="true">play_arrow</span>
                   </a>
                 {% endif %}
+                <a href="{{ url_for('Airflow.parse_dag', file_token=dag.file_token, redirect_url=url_for(request.endpoint)) }}" title="Reparse&nbsp;DAG" aria-label="Reparse DAG"
+                    class="btn btn-sm btn-default btn-icon-only{{ ' disabled' if not dag.can_edit }}">
+                    <span class="material-icons">cached</span>
+                </a>
                 <a href="{{ url_for('Airflow.delete', dag_id=dag.dag_id, redirect_url=url_for(request.endpoint)) }}"
                     onclick="return confirmDeleteDag(this, '{{ dag.dag_id }}')" title="Delete&nbsp;DAG"
                     aria-label="Delete DAG"
                     class="btn btn-sm btn-default btn-icon-only{{ ' disabled' if not dag.can_delete }}">
                     <span class="material-icons text-danger" aria-hidden="true">delete_outline</span>
                   </a>
-                <a href="{{ url_for('/api/v1.airflow_api_connexion_endpoints_dag_parsing_reparse_dag_file', file_token=dag.file_token) }}" title="Reparse&nbsp;DAG" aria-label="Reparse DAG"
-                    class="btn btn-sm btn-default btn-icon-only{{ ' disabled' if not dag.can_edit }} reparse_dag">
-                    <span class="material-icons">cached</span>
-                </a>
                 {% endif %}
               </div>
             </td>
