--- a/airflow/www/templates/airflow/dags.html
+++ b/airflow/www/templates/airflow/dags.html
@@ -147,15 +147,11 @@
       </div>
       <div class="form-group btn-group p-2">
         <a
-          href="{{ url_for('Airflow.index', lastrun='all_states', status=request.args.get('status', 'all'), search=request.args.get('search', None), tags=request.args.getlist('tags', None)) }}"
-          class="btn {{ 'btn-primary' if lastrun_filter == 'all_states' else 'btn-default' }}"
-          title="Show DAG runs in any state">All states <span class="badge">{{ "{:,}".format(lastrun_count_all) }}</span></a>
-        <a
-          href="{{ url_for('Airflow.index', lastrun='running', status=request.args.get('status', 'all'), search=request.args.get('search', None), tags=request.args.getlist('tags', None)) }}"
+          href="{{ url_for('Airflow.index', lastrun='all' if lastrun_filter == 'running' else 'running', status=request.args.get('status', 'all'), search=request.args.get('search', None), tags=request.args.getlist('tags', None)) }}"
           class="btn {{ 'btn-primary' if lastrun_filter == 'running' else 'btn-default' }}"
           title="Show currently running DAG runs">Running <span class="badge">{{ "{:,}".format(lastrun_count_running) }}</span></a>
         <a
-          href="{{ url_for('Airflow.index', lastrun='failed', status=request.args.get('status', 'all'), search=request.args.get('search', None), tags=request.args.getlist('tags', None)) }}"
+          href="{{ url_for('Airflow.index', lastrun='all' if lastrun_filter == 'failed' else 'failed', status=request.args.get('status', 'all'), search=request.args.get('search', None), tags=request.args.getlist('tags', None)) }}"
           class="btn {{ 'btn-primary' if lastrun_filter == 'failed' else 'btn-default' }}"
           title="Show DAGs with failed latest DAG run">Failed <span class="badge">{{ "{:,}".format(lastrun_count_failed) }}</span></a>
       </div>
