--- a/airflow/www/templates/airflow/dag.html
+++ b/airflow/www/templates/airflow/dag.html
@@ -231,7 +231,7 @@
             <span class="material-icons" aria-hidden="true">play_arrow</span>
         </a>
         {% endif %}
-        <a href="{{ url_for('Airflow.parse_dag', file_token=dag.file_token, redirect_url=url_for(request.endpoint, dag_id=dag.dag_id)) }}"
+        <a href="{{ url_for('Airflow.parse_dag', file_token=dag_file_token, redirect_url=url_for(request.endpoint, dag_id=dag.dag_id)) }}"
            title="Reparse&nbsp;DAG"
            aria-label="Reparse DAG"
            class="btn btn-default btn-icon-only {{ ' disabled' if not dag.can_edit }}">
