--- a/airflow/www/templates/airflow/dags.html
+++ b/airflow/www/templates/airflow/dags.html
@@ -392,7 +392,7 @@
                     <span class="material-icons" aria-hidden="true">play_arrow</span>
                   </a>
                 {% endif %}
-                <a href="{{ url_for('Airflow.parse_dag', file_token=dag.file_token, redirect_url=url_for(request.endpoint)) }}" title="Reparse&nbsp;DAG" aria-label="Reparse DAG"
+                <a href="{{ url_for('Airflow.parse_dag', file_token=file_tokens[dag.dag_id], redirect_url=url_for(request.endpoint)) }}" title="Reparse&nbsp;DAG" aria-label="Reparse DAG"
                     class="btn btn-sm btn-default btn-icon-only{{ ' disabled' if not dag.can_edit }}">
                     <span class="material-icons">cached</span>
                 </a>
