--- a/airflow/www/templates/airflow/dag.html
+++ b/airflow/www/templates/airflow/dag.html
@@ -235,7 +235,7 @@
            title="Reparse&nbsp;DAG"
            aria-label="Reparse DAG"
            class="btn btn-default btn-icon-only {{ ' disabled' if not dag.can_edit }}">
-          <span class="material-icons">cached</span>
+          <span class="material-icons">restore_page</span>
         </a>
         <a href="{{ url_for('Airflow.delete', dag_id=dag.dag_id, redirect_url=url_for(request.endpoint, dag_id=dag.dag_id)) }}"
           title="Delete&nbsp;DAG"
