--- a/airflow/www/static/css/bootstrap-theme.css
+++ b/airflow/www/static/css/bootstrap-theme.css
@@ -39,8 +39,20 @@ html {
 html[data-color-scheme="dark"] {
   filter: invert(100%) hue-rotate(180deg);
 }
+html[data-color-scheme="dark"] #dark_icon {
+  display: block;
+}
+html[data-color-scheme="dark"] #light_icon {
+  display: none;
+}
 html[data-color-scheme="light"] {
   /* not do */
+}
+html[data-color-scheme="light"] #dark_icon {
+  display: none;
+}
+html[data-color-scheme="light"] #light_icon {
+  display: block;
 }
 body {
   margin: 0;
