--- a/airflow/www/static/css/material-icons.css
+++ b/airflow/www/static/css/material-icons.css
@@ -71,8 +71,7 @@
 }
 
 .dropdown-menu > li > a > .material-icons,
-.dropdown-menu > li > form > button > .material-icons
-{
+.dropdown-menu > li > form > button > .material-icons {
   margin-right: 6px;
 }
 
