--- a/airflow/utils/python_virtualenv_script.jinja2
+++ b/airflow/utils/python_virtualenv_script.jinja2
@@ -16,7 +16,9 @@
  specific language governing permissions and limitations
  under the License.
 -#}
-
+{% if import_annotations | default(False) %}
+from __future__ import annotations
+{% endif %}
 import {{ pickling_library }}
 import sys
 
