--- a/airflow/www/templates/appbuilder/navbar.html
+++ b/airflow/www/templates/appbuilder/navbar.html
@@ -51,7 +51,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="active">
-          <div style="padding: 20px; cursor: pointer" id="themeToggleButton">
+          <div title="Experimental Dark Mode" aria-label="Experimental Dark Mode" style="padding: 20px; cursor: pointer" id="themeToggleButton">
             <div id="dark_icon">
               <i class="fa-regular fa-moon fa-lg" id="themeToggleButton"></i>
             </div>
